# autonomous-agents

./: .env.example  .gitignore  404.html  LICENSE  README.md  docker-compose.deployment.yml  docker-compose.dev.yml  docker-compose.local.yml  index.html  install-pre-commit-hook.sh  next.config.mjs  package-lock.json  package.json  prettier.config.js  pyproject.toml  sitemap.xml  tailwind.config.ts  tsconfig.json
agent-python/: Dockerfile  README.md  pre-commit.sh  pyproject.toml
agent-python/client/: config_handler.py
api/: .env.example  Dockerfile  Makefile  README.md  healthcheck.py  pre-commit.sh  pyproject.toml  run.sh  seed.sh
api/backend/: container.py  dependency.py
api/backend/app/: __init__.py  asgi.py  router.py
api/backend/app/auth/: cookie_dependency.py  jwt_token.py
api/backend/app/controllers/: agent_router.py  auth_router.py  function_router.py  health.py  template_router.py  template_trigger_router.py  trigger_history_router.py  trigger_router.py
api/backend/app/exceptions/: forbidden_exception.py
api/backend/app/helper/: function_metadata.py  seed.py
api/backend/app/models/: __init__.py
api/backend/app/repositories/: agent_instance_wallet_repository.py  agent_repository.py  function_repository.py  template_repository.py  template_trigger_repository.py  trigger_history_repository.py  trigger_repository.py  user_repository.py
api/backend/app/services/: agent_instance_wallet_service.py  agent_service.py  drep_service.py  function_services.py  kafka_service.py  proposal_service.py  template_service.py  template_trigger_service.py  trigger_history_service.py  trigger_service.py  user_service.py
api/backend/app/utils/: auth.py  extras.py  generator.py  signed_data.py
api/backend/app/views/: ready.py
api/backend/config/: api_settings.py  application.py
api/charts/backend/: README.md
api/docs/: api.rst  index.rst
api/prisma/: schema.prisma
api/prisma/migrations/20240613112419_/: migration.sql
api/prisma/migrations/20240620080038_add_new_type_for_trigger_history_model/: migration.sql
api/prisma/migrations/20240620081111_add_enum_for_trigger_type/: migration.sql
api/prisma/migrations/20240701071807_/: migration.sql
api/prisma/migrations/20240712071159_create_user_model/: migration.sql
api/prisma/migrations/20240712072321_remove_address_from_user_model/: migration.sql
api/prisma/migrations/20240712075253_update_user_model/: migration.sql
api/prisma/migrations/20240712080107_change_user_col_id_to_address/: migration.sql
api/prisma/migrations/20240718045614_add_new_trigger_type_enum/: migration.sql
api/prisma/migrations/20240718063211_add_super_user_attribute_to_user/: migration.sql
api/prisma/migrations/20240820071719_make_template_optional_for_agent/: migration.sql
api/prisma/migrations/20240905095810_add_agent_instance_index/: migration.sql
api/prisma/migrations/20240909085737_add_agent_instance_wallet_table/: migration.sql
api/prisma/migrations/20240925010506_add_drep_registration_status/: migration.sql
api/prisma/migrations/20240926052644_/: migration.sql
api/prisma/migrations/20241003113518_add_secret_key_for_agent/: migration.sql
api/prisma/migrations/20241004065657_add_foreign_key_on_agent_wallet_details/: migration.sql
api/prisma/migrations/20241004072605_add_secret_key_column/: migration.sql
api/prisma/migrations/20241018074622_add_param_and_result_in_log/: migration.sql
api/prisma/migrations/20250812061529_add_config_to_agent/: migration.sql
api/prisma/migrations/20250828090531_add_agent_config/: migration.sql
api/tests/unit/app/: conftest.py  test_asgi.py
autonomous_agent_api/: .env.example  .fastapi-mvc.yml  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
autonomous_agent_api/backend/: .fastapi-mvc.yml  Dockerfile  README.md  __init__.py  __main__.py  container.py  dependency.py  pyproject.toml  version.py  wsgi.py
autonomous_agent_api/backend/app/: asgi.py  router.py
autonomous_agent_api/backend/app/controllers/: agent_router.py  agent_websocket.py  demo.py  function_router.py  ready.py  template_router.py  template_trigger_router.py  trigger_history_router.py  trigger_router.py  websocket_router.py
autonomous_agent_api/backend/app/exceptions/: __init__.py  http.py
autonomous_agent_api/backend/app/helper/: function_metadata.py
autonomous_agent_api/backend/app/models/: __init__.py  agent_dto.py  response_dto.py
autonomous_agent_api/backend/app/repositories/: agent_repository.py  template_repository.py  template_trigger_repository.py  trigger_repository.py  websocket_manager_repository.py
autonomous_agent_api/backend/app/services/: agent_service.py  template_service.py  template_trigger_service.py  trigger_service.py  websocket_manager_service.py
autonomous_agent_api/backend/app/utils/: __init__.py  redis.py
autonomous_agent_api/backend/app/views/: error.py  ready.py
autonomous_agent_api/backend/backend/: wsgi.py
autonomous_agent_api/backend/backend/app/: asgi.py  router.py
autonomous_agent_api/backend/charts/backend/: Chart.yaml
autonomous_agent_api/backend/cli/: __init__.py  cli.py  serve.py  utils.py
autonomous_agent_api/backend/config/: __init__.py  application.py  database.py  logger.py  redis.py
autonomous_agent_api/backend/docs/: conf.py
autonomous_agent_api/backend/tests/unit/: conftest.py
autonomous_agent_api/charts/backend/: values.yaml
autonomous_agent_api/docs/: conf.py  install.rst  usage.rst
autonomous_agent_api/prisma/: schema.prisma
autonomous_agent_api/tests/unit/: test_wsgi.py
autonomous_agent_api/tests/unit/app/: conftest.py  (+1 more)
autonomous_agent_py/: .gitignore  CHANGELOG.md  pyproject.toml
autonomous_agent_py/client/: actions.py  connection_handler.py  schedule.py
tests/test-api/: .env.example  .gitignore  README.md  config.py  pyproject.toml
tests/test-api/lib/: autonomous_agent_api.py  faucet_api.py
tests/test-api/models/: cardano.py
tests/test-api/test_cases/: conftest.py  test_agent.py  test_agent_functions.py  test_agents.py  test_auth.py  test_template.py  test_templates.py
(+4260 files in other folders)
