[tool.poetry]
name = "autonomous-agent"
version = "0.1.0"
description = ""
authors = ["Roshan Gyawali,Joseph Rana <josephranamgr7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
