[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Autonomous Agent Testing .This project was generated with fastapi-mvc."
authors = ["Roshan Gyawali <gyawalirprogrammer@gmail.com,Joseph Rana <josephranamgr7@gmail.com>"]
license = "no"
readme = "README.md"
repository = "https://github.com/sireto/cardano-autonomous-agent"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.98.0"
uvicorn = {extras = ["standard"], version = "~0.22.0"}
gunicorn = "~20.1.0"
click = "~8.1.3"
redis = "~4.5.5"
aiohttp = "~3.9.3"
prisma = "^0.13.0"
pytest-dotenv = "^0.5.2"
classy-fastapi = "^0.6.1"
croniter = "^2.0.3"
pycardano = "^0.10.0"
aiokafka = "^0.10.0"
fastapi-pagination = "^0.12.25"
[tool.poetry.group.dev.dependencies]
pytest = "~7.4.0"
pytest-cov = "~4.0.0"
pytest-asyncio = "~0.21.0"
requests = "~2.28.2"
httpx = "~0.23.3"
aioresponses = "~0.7.3"
mypy = "~1.4.1"
flake8 = "~5.0.4"
flake8-docstrings = "~1.7.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "^24.4.2"
Sphinx = "~5.3.0"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~1.0.0"
fastapi-mvc = "^0.26.0"

[tool.poetry.scripts]
backend = 'backend.cli:cli'

[tool.poetry.urls]
"Issues" = "/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "backend/config/gunicorn.py",
    "backend/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pass",
]

[tool.mypy]
exclude = [
    "config/gunicorn.py"
]
plugins = "pydantic.mypy"
python_version = '3.10'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "gunicorn.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "ping: run demo test",
    "github_actions: Tests for Github actions",
]
