[tool.poetry]
name = "autonomous-agent"
version = "0.1.0"
description = ""
authors = ["Joseph Rana <josephranamgr7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
